cleanup and suggestions from code review, switch model download away from TE

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_content.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_content.ipynb
@@ -8,7 +8,9 @@
     "# List of available data to load\n",
     "\n",
     "1. [MAGIC Gamma Telescope](data_telescope.ipynb)\n",
-    "1. [Abalone Rings](data_abalone.ipynb)"
+    "2. [Abalone Rings](data_abalone.ipynb)\n",
+    "3. [Flight Data](data_flights.ipynb)\n",
+    "4. [Customer Support Tickets](data_customer_support.ipynb)"
    ]
   },
   {
