--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_customer_support.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_customer_support.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Customer Support ticket Dataset\n",
     "\n",
-    "Here we will load a dataset containing customer support Tickets. There are ca. 8500 customer tickets, and each tickets as values such as customer details, purchased product, description, ticket types and various ticket labels. #todo link\n",
+    "Here we will load a dataset containing customer support Tickets. There are ca. 8500 customer tickets, and each tickets as values such as customer details, purchased product, description, ticket types and various ticket labels. Find the dataset [here](https://www.kaggle.com/datasets/suraj520/customer-support-ticket-dataset).\n",
     "\n",
     "\n",
     "## Prerequisites\n",
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "initial_id",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0cc3fde7cb644c959b066c14bcbd2f73",
+       "model_id": "c8d955bb513a44d595d427c6366debbc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -43,7 +43,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e6070f0cd724adaa02f4f6acfb98ce8",
+       "model_id": "2b7b36e798bc4ed5ac30a8d54d8a45b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,12 +67,12 @@
    "source": [
     "## Download data\n",
     "\n",
-    "We will access the dataset on [Kaggle](https://www.kaggle.com/) using [kagglehub](https://github.com/Kaggle/kagglehub)."
+    "We will access the dataset on [Kaggle](https://www.kaggle.com/) using [kagglehub](https://github.com/Kaggle/kagglehub), and load it into a pandas dataframe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "2cc9cc97741db1c7",
    "metadata": {},
    "outputs": [
@@ -80,53 +80,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: kagglehub in /home/jupyter/jupyterenv/lib/python3.10/site-packages (0.3.12)\n",
-      "Requirement already satisfied: packaging in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from kagglehub) (24.2)\n",
-      "Requirement already satisfied: pyyaml in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from kagglehub) (6.0.2)\n",
-      "Requirement already satisfied: requests in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from kagglehub) (2.32.3)\n",
-      "Requirement already satisfied: tqdm in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from kagglehub) (4.67.1)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from requests->kagglehub) (3.4.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from requests->kagglehub) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from requests->kagglehub) (2.3.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from requests->kagglehub) (2025.1.31)\n",
+      "Requirement already satisfied: kagglehub[pandas-datasets] in /home/jupyter/jupyterenv/lib/python3.10/site-packages (0.3.12)\n",
+      "Requirement already satisfied: packaging in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from kagglehub[pandas-datasets]) (24.2)\n",
+      "Requirement already satisfied: pyyaml in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from kagglehub[pandas-datasets]) (6.0.2)\n",
+      "Requirement already satisfied: requests in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from kagglehub[pandas-datasets]) (2.32.3)\n",
+      "Requirement already satisfied: tqdm in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from kagglehub[pandas-datasets]) (4.67.1)\n",
+      "Requirement already satisfied: pandas in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from kagglehub[pandas-datasets]) (2.2.3)\n",
+      "Requirement already satisfied: numpy>=1.22.4 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from pandas->kagglehub[pandas-datasets]) (1.26.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from pandas->kagglehub[pandas-datasets]) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from pandas->kagglehub[pandas-datasets]) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from pandas->kagglehub[pandas-datasets]) (2025.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from requests->kagglehub[pandas-datasets]) (3.4.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from requests->kagglehub[pandas-datasets]) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from requests->kagglehub[pandas-datasets]) (2.3.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from requests->kagglehub[pandas-datasets]) (2025.1.31)\n",
+      "Requirement already satisfied: six>=1.5 in /home/jupyter/jupyterenv/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas->kagglehub[pandas-datasets]) (1.17.0)\n",
       "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.1.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Path to dataset files: /home/jupyter/.cache/kagglehub/datasets/suraj520/customer-support-ticket-dataset/versions/1\n"
+      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m A new release of pip is available: \u001B[0m\u001B[31;49m25.0.1\u001B[0m\u001B[39;49m -> \u001B[0m\u001B[32;49m25.1.1\u001B[0m\n",
+      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m To update, run: \u001B[0m\u001B[32;49mpip install --upgrade pip\u001B[0m\n"
      ]
     }
    ],
    "source": [
-    "!pip install kagglehub\n",
+    "!pip install kagglehub[pandas-datasets]\n",
+    "import re\n",
     "import kagglehub\n",
+    "from kagglehub import KaggleDatasetAdapter\n",
     "\n",
-    "#todo switch to S3 download, put filtered data there first\n",
     "# Download latest version\n",
-    "download_path = kagglehub.dataset_download(\"suraj520/customer-support-ticket-dataset\")\n",
-    "\n",
-    "print(\"Path to dataset files:\", download_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "87c913b68ff37913",
-   "metadata": {},
-   "source": [
-    "Then we will load the data into a csv and convert it into a pandas dataframe for ease of use."
+    "df = kagglehub.dataset_load(\n",
+    "    KaggleDatasetAdapter.PANDAS, \n",
+    "    \"suraj520/customer-support-ticket-dataset\", \n",
+    "    \"customer_support_tickets.csv\"\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6e05ed696fc66688",
+   "execution_count": 48,
+   "id": "597cca4e-bcad-4f23-a9a6-af8b49708a32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "import pandas as pd\n",
     "\n",
-    "csv_file = next(Path(download_path).glob(\"*\"))\n",
-    "df = pd.read_csv(csv_file)"
+    "# replace {product purchased} placeholder in the ticket description with the product name\n",
+    "pattern = re.compile(\n",
+    "    r'\\{\\w*(product|purchase|name|item)\\w*\\}', \n",
+    "    re.IGNORECASE\n",
+    ")\n",
+    "df['Ticket Description'] = df.apply(\n",
+    "    lambda row: pattern.sub(row['Product Purchased'], row['Ticket Description']),\n",
+    "    axis=1\n",
+    ")\n",
+    "\n"
    ]
   },
   {
@@ -139,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "id": "2c33db2724e611a6",
    "metadata": {},
    "outputs": [],
@@ -174,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7caa2154-5254-4d8c-beca-05f9f22ad7dd",
+   "id": "c18ad6a6-0216-48f7-bf4e-ac68d6e7fe94",
    "metadata": {},
    "outputs": [],
    "source": []
