--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/utils/txaie_default_models.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/utils/txaie_default_models.ipynb
@@ -7,19 +7,8 @@
    "source": [
     "# Downlod default models for Ai-Lab Demos\n",
     "\n",
-    "This notebook will download a number of transformers models from HuggingFace. These are models we use as default modelf for our Text AI Extebsion demo Notebooks.\n",
-    "                                                                                                                       \n",
-    "First, we import the \"load_huggingface_model\" defined in another notebook, which will help us download the models."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b31c770-4f1f-4e0c-b550-290d4b338e8f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%run ../transformers/utils/model_retrieval.ipynb"
+    "This notebook will download a number of transformers models from HuggingFace. These are models we use as default modelf for our Text AI Extension demo Notebooks.\n",
+    "                                                                                                                       "
    ]
   },
   {
@@ -27,7 +16,7 @@
    "id": "3527c269-de1d-4b07-aae6-2fe6fb27c497",
    "metadata": {},
    "source": [
-    "Here, we define which models we want to use. You can browse for your preferred model [here](https://huggingface.co/models)."
+    "First, some imports:"
    ]
   },
   {
@@ -37,9 +26,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NAMED_ENTITY_MODEL=\"guishe/nuner-v2_fewnerd_fine_super\"\n",
-    "NLI_MODEL=\"tasksource/ModernBERT-base-nli\"\n",
-    "FEATURE_EXTRACTION_MODEL=\"answerdotai/ModernBERT-base\""
+    "from transformers import (\n",
+    "    AutoModel,\n",
+    "    AutoModelForTokenClassification,\n",
+    "    AutoModelForSequenceClassification\n",
+    ")\n",
+    "from exasol.nb_connector.connections import open_bucketfs_location\n",
+    "from exasol.nb_connector.text_ai_extension_wrapper import PATH_IN_BUCKET #todo should we still use te directory one cause of reuse of models?\n",
+    "from exasol.ai.text.extractors.default_models import *\n",
+    "from exasol.ai.text.impl.utils.transformers_utils import download_transformers_model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4f8026c-84ca-43a5-a1cc-60556e67d4c0",
+   "metadata": {},
+   "source": [
+    "Now, we define a function which can download a model for us."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a303ff9a-086b-4673-af64-fb64ad7ee128",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bucketfs_location = open_bucketfs_location(ai_lab_config) / PATH_IN_BUCKET\n",
+    "\n",
+    "def download_transformers_model_for_txaie(model, task_type, model_factory):\n",
+    "    download_transformers_model(\n",
+    "        bucketfs_location=bucketfs_location,\n",
+    "        sub_dir=ai_lab_config.txaie_models_bfs_dir,#todo should we still use te directory one cause of reuse of models?\n",
+    "        task_type=task_type,\n",
+    "        model_name=model,\n",
+    "        model_factory=model_factory\n",
+    "    )"
    ]
   },
   {
@@ -55,31 +77,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fab51f3-d34d-4e63-b883-357a3d81fc7e",
+   "id": "6f2e25e3-8848-4eae-9955-dab1b13bb85a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_huggingface_model(ai_lab_config, NAMED_ENTITY_MODEL, 'token-classification')"
+    "download_transformers_model_for_txaie(DEFAULT_FEATURE_EXTRACTION_MODEL, 'feature-extraction', AutoModel)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e6dc51a-4cc3-4a74-be9d-2c9694eeb356",
+   "id": "5173f08c-6cd4-4c81-b780-e9e5d4593a0b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_huggingface_model(ai_lab_config, NLI_MODEL, 'zero-shot-classification')"
+    "download_transformers_model_for_txaie(DEFAULT_NAMED_ENTITY_MODEL, 'token-classification', AutoModelForTokenClassification)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bb0d71e-851a-4746-80f1-d0d99de8b065",
+   "id": "dadba1d6-2925-4b06-a60f-696f344a2d17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_huggingface_model(ai_lab_config, FEATURE_EXTRACTION_MODEL, 'feature-extraction')"
+    "download_transformers_model_for_txaie(DEFAULT_NLI_MODEL, 'zero-shot-classification', AutoModelForSequenceClassification)"
    ]
   },
   {
