--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/utils/txaie_extraction_wrapper.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/utils/txaie_extraction_wrapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "af7de0d2994a4412",
    "metadata": {},
    "outputs": [],
@@ -13,13 +13,13 @@
     "from exasol.ai.text.extraction import AbstractExtraction\n",
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "from exasol.ai.text.extraction.abstract_extraction import Output\n",
-    "from exasol.nb_connector.secret_store import Secrets #todo is this installed here?\n",
+    "from exasol.nb_connector.secret_store import Secrets\n",
     "from exasol.nb_connector.ai_lab_config import AILabConfig as CKey\n",
     "from exasol.nb_connector.language_container_activation import get_activation_sql\n",
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "\n",
     "\n",
-    "class ExtractionWrapper(Extraction, AbstractExtraction):#todo do we nedd the second?\n",
+    "class ExtractionWrapper(AbstractExtraction):\n",
     "\n",
     "    def run(self, conf: Secrets) -> None:\n",
     "        activation_sql = get_activation_sql(conf)\n",
@@ -27,20 +27,24 @@
     "            connection.execute(query=activation_sql)\n",
     "            db_schema = conf.db_schema\n",
     "            language_alias = \"PYTHON3_TXAIE\" #conf.get(CKey.language_alias)todo change once var exists in sectret store\n",
-    "            #Extraction(\n",
-    "            #    extractor=extractor,\n",
-    "            #    output=Output(db_schema=schema),\n",
-    "            #    defaults=defaults\n",
-    "            #).run(\n",
-    "            super().run(\n",
+    "            Extraction(\n",
+    "                extractor=self.extractor,\n",
+    "                output=self.output,\n",
+    "                defaults=self.defaults).run(\n",
     "                connection,\n",
-    "                schema,\n",
-    "                LANGUAGE_ALIAS,\n",
+    "                db_schema,\n",
+    "                language_alias,\n",
     "            )\n",
-    "\n",
-    " \n",
-    "\n"
+    " \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50a145b4-6348-4d59-a6c0-1467b05037df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
