--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/utils/txaie_init_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/utils/txaie_init_ui.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_txaie_SLC_name_ui(conf: Secrets) -> widgets.Widget:#todo do we want to use a specific language alias var instead\n",
+    "def get_txaie_SLC_name_ui(conf: Secrets) -> widgets.Widget:\n",
     "    inputs = [\n",
     "        ('Language Alias', widgets.Text(value=conf.get(CKey.language_alias)), CKey.language_alias),\n",
     "    ]\n",
