--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
@@ -151,7 +151,7 @@
     "    project_wheel, slc_tar_gz = unzipped_files\n",
     "\n",
     "    pip_cmd = ['pip', 'install', str(project_wheel)]\n",
-    "    subprocess.run(pip_cmd, check=True, capture_output=True)\n",
+    "    subprocess.run(pip_cmd, check=True)\n",
     "\n",
     "    initialize_text_ai_extension(ai_lab_config, container_file=slc_tar_gz)\n"
    ]
