Use pip magic instead subprocess in txaie_init.ipynb

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
@@ -150,8 +150,8 @@
     "with download_pre_release(ai_lab_config) as unzipped_files:\n",
     "    project_wheel, slc_tar_gz = unzipped_files\n",
     "\n",
-    "    pip_cmd = ['pip', 'install', str(project_wheel)]\n",
-    "    subprocess.run(pip_cmd, check=True)\n",
+    "    wheel_path = str(project_wheel)\n",
+    "    !pip intall {wheel_path}\n",
     "\n",
     "    initialize_text_ai_extension(ai_lab_config, container_file=slc_tar_gz)\n"
    ]
