--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
@@ -152,7 +152,7 @@
     "\n",
     "    wheel_path = str(project_wheel)\n",
     "    !pip install {wheel_path}\n",
-    "\n",
+    "    from exasol.ai.text.extraction.extraction import Extraction\n",
     "    initialize_text_ai_extension(ai_lab_config, container_file=slc_tar_gz)\n"
    ]
   },
