--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
@@ -154,7 +154,7 @@
     "    !pip install {wheel_path}\n",
     "    import os\n",
     "    virtual_env = os.environ[\"VIRTUAL_ENV\"]\n",
-    "    !ls {virtual_env}/lib/*/site-packages/exasol/*\n",
+    "    !ls -la {virtual_env}/lib/*/site-packages/exasol/*\n",
     "    initialize_text_ai_extension(ai_lab_config, container_file=slc_tar_gz)\n"
    ]
   },
