Remove progressbar from pip install

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
@@ -151,7 +151,7 @@
     "    project_wheel, slc_tar_gz = unzipped_files\n",
     "\n",
     "    wheel_path = str(project_wheel)\n",
-    "    !pip install {wheel_path}\n",
+    "    !pip install --progress-bar off {wheel_path}\n",
     "    import os\n",
     "    virtual_env = os.environ[\"VIRTUAL_ENV\"]\n",
     "    !ls -la {virtual_env}/lib/*/site-packages/exasol/*\n",
