Adapt txaie_preprocessing.ipynb to new version of Text AI

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_preprocessing.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_preprocessing.ipynb
@@ -497,6 +497,7 @@
     "key_column=\"TICKET_ID\"\n",
     "\n",
     "src_extractor = SourceTableExtractor(\n",
+    "                        name='DOCUMENTS',\n",
     "                        sources=[\n",
     "                            SchemaSource(\n",
     "                                db_schema=NameSelector(pattern=schema),\n",
