Applying review suggestion

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_customer_support.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/data/data_customer_support.ipynb
@@ -5,11 +5,11 @@
    "id": "738b2deeb6043fb5",
    "metadata": {},
    "source": [
-    "# Customer Support ticket Dataset\n",
+    "# Customer Support Ticket Dataset\n",
     "\n",
-    "Here we will load a dataset containing customer support tickets. We are using a modified version of the following [dataset](https://www.kaggle.com/datasets/suraj520/customer-support-ticket-dataset). In the original dataset are ca. 8500 customer tickets, and each tickets has values such as customer details, purchased product, description, ticket types and various ticket labels.\n",
+    "Here we will load a dataset containing customer support tickets. We are using a modified version of the following [dataset](https://www.kaggle.com/datasets/suraj520/customer-support-ticket-dataset). \n",
     "\n",
-    "We modified the dataset by removing the purchased product and a few other information that are not important for our demonstration from the dataset. We also removed the most dirty tickets that contained artifacts of the dataset creation which left us with 3606. Furthermore, we replaced the purchased product placeholders in the ticket description with the actual product name, to show you in later notebooks, how you can extract this information from text with the help of Exasol.\n",
+    "We modified the original dataset by removing data that was not needed for this demonstration. Furthermore, we replaced the purchased product placeholders in the ticket description with the actual product name, to show you in later notebooks, how you can extract this information from text with the help of Exasol.\n",
     "\n",
     "\n",
     "## Prerequisites\n",
@@ -100,9 +100,7 @@
    "source": [
     "## Inspect the Data\n",
     "\n",
-    "Now we can inspect the data. \n",
-    "\n",
-    "**Note**: The data is not real and the dataset can be inspite of cleaning still a bit dirty. The latter point, can be true for real text, too, so the dataset is good representation of real world data."
+    "Now we can inspect the data."
    ]
   },
   {
