--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
@@ -11,6 +11,12 @@
     "\n",
     "## Prerequisites\n",
     "\n",
+    "**Note**: To be able to store and the run the models used in this demo, your database need fullfil the following prerequisites:\n",
+    "\n",
+    "* The database has at least 10 GB free disk space for the BucketFS. In case you are using the Exasol Docker-DB, your Docker host needs at least 10 GB free disk space.\n",
+    "* The database is configured with at least 8 GB RAM. In case you are using the Exasol Docker-DB, please configure the Exasol Docker-DB accordingly in the AI-Lab Main Configuration and restart the Docker-DB if needed. \n",
+    "    * **Caution**: Restarting the Docker-DB will wipe the content of the database.\n",
+    "\n",
     "Prior to using this notebook one needs to complete the following steps:\n",
     "1. [Configure the AI-Lab](../../main_config.ipynb).\n",
     "\n",
@@ -21,39 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ca9cc3b0-2191-4e57-8e02-0256b5574b4f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce237d11ab63402cb71eedfce4c6309c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a4c62f5d582452aba855709e51cd0ea",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Box(children=(Box(children=(Label(value='Configuration Store', layout=Layout(border_bottom='solid 1px', border…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ../../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../../'))"
@@ -69,25 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "61af171a-df95-4f9f-a911-4f9f2a003a48",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c47b425a78cc4f688256927782aeb698",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Box(children=(Box(children=(Label(value='Pre-release Access', layout=Layout(border_bottom='solid 1px', border_…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run utils/txaie_init_ui.ipynb\n",
     "display(get_txaie_pre_release_ui(ai_lab_config))"
@@ -107,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7b8d3ea7-30f1-46ff-9a89-573e0d7cdc34",
    "metadata": {
     "editable": true,
@@ -118,31 +80,7 @@
      "uploading_model"
     ]
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:The requested language alias PYTHON3_TXAIE is already in use.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "In SQL, you can activate the SLC\n",
-      "by using the following statements:\n",
-      "\n",
-      "To activate the SLC only for the current session:\n",
-      "ALTER SESSION SET SCRIPT_LANGUAGES='R=builtin_r JAVA=builtin_java PYTHON3=builtin_python3 PYTHON3_TXAIE=localzmq+protobuf:///bfsdefault/default/TXAIE/exasol_text_ai_extension_container_release?lang=python#/buckets/bfsdefault/default/TXAIE/exasol_text_ai_extension_container_release/exaudf/exaudfclient_py3';\n",
-      "\n",
-      "To activate the SLC on the system:\n",
-      "ALTER SYSTEM SET SCRIPT_LANGUAGES='R=builtin_r JAVA=builtin_java PYTHON3=builtin_python3 PYTHON3_TXAIE=localzmq+protobuf:///bfsdefault/default/TXAIE/exasol_text_ai_extension_container_release?lang=python#/buckets/bfsdefault/default/TXAIE/exasol_text_ai_extension_container_release/exaudf/exaudfclient_py3';\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import subprocess\n",
     "from exasol.nb_connector.text_ai_extension_wrapper import initialize_text_ai_extension, download_pre_release\n",
